[gd_scene load_steps=6 format=4 uid="uid://bx7xirmh0c752"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1"]
[ext_resource type="Script" uid="uid://bkebcgmvor3kw" path="res://scenes/windows/window_variable_combiner.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cd8vman2gua7q" path="res://textures/icons/combine.png" id="3"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b4efojcll7i7" path="res://scenes/output_container.tscn" id="5"]

[node name="WindowBase" instance=ExtResource("1")]
offset_bottom = 187.0
script = ExtResource("2")
window = "variable_combiner"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "Variable Combiner"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Input1" parent="PanelContainer/MainContainer" index="0" instance=ExtResource("4")]
layout_mode = 2
placeholder_name = "input_variable"
override_connector = "triangle_down"
override_color = "cyan"

[node name="Input2" parent="PanelContainer/MainContainer" index="1" instance=ExtResource("4")]
layout_mode = 2
placeholder_name = "input_variable"
override_connector = "triangle_down"
override_color = "cyan"

[node name="Output" parent="PanelContainer/MainContainer" index="2" instance=ExtResource("5")]
layout_mode = 2

[connection signal="resource_set" from="PanelContainer/MainContainer/Input1" to="." method="_on_input_1_resource_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/Input2" to="." method="_on_input_2_resource_set"]
